--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
         <link
             rel="icon"
             type="image/svg+xml"
-            href="/vite.svg"
-        >
+            href="/vite.svg" />
         <meta
-            aaa
             name="viewport"
-            content="width=device-width, initial-scale=1.0"
-        >
+            content="width=device-width, initial-scale=1.0" />
         <title>commitcv</title>
     </head>
+
     <body>
         <div id="root"></div>
         <script
